# spectrum-design-data

./: .cursorrules  .gitignore  .lintstagedrc  .lintstagedrc.js  .lintstagedrc.json  .mcp.json  .prototools  AGENTS.md  APP_FRAME_BROWSING_WIKI.md  CLAUDE.md  CLI_INTERFACE_COMPARISON.md  DOLT_REMOTE.md  GLOSSARY_IMPLEMENTATION_STATUS.md  OLD_REPO_SETUP.md  PR_CLOSURE_RECOMMENDATIONS.md  PR_REVIEW_SUMMARY.md  README.md  REFACTOR_CHECKLIST.md  SDS_15462_JIRA.md  SPECTRUM_MULTIPLATFORM_SDK_STRATEGY.md  SPECTRUM_NAMING_GUIDE_WIKI.md  SPECTRUM_TOKENS_WIKI.md  Spectrum core tokens.xlsx  TOOLING_STANDARDS.md  VIRTUAL_ASSISTANT_CONTEXT.md  changeset-example-concise.md  config.js  diff.txt  document-blocks-review.md  drover-config.js  index.js  llms.txt  manifest  moon.yml  output.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec-tokens.xlsx  spectrum-token-name-parts.xlsx  (+1 more)
.changeset/: 04c1-space-between-endpoint-fields.md  04c6-gap-endpoint-apply.md  04c8-gap-endpoint-validate-dataset-gap.md  0jm-components-path-ci-gate.md  20250926-fcd37a2f.md  20260324-5de7c01e.md  20260325-normalize-deprecation.md  20260402-93d6e2ae.md  20260402-ea9eb540.md  20260624-5eeadcd1.md  20260624-b2-lifecycle-ops.md  20260624-b3-mode-set-management.md  20260624-b4-catalog-classification.md  20260624-design-data-layout-sync.md  24aeff17e430.md  2wr-size-decompose.md  5us-nested-anatomy-contains.md  7a5-component-anatomy-state-gaps.md  7zs-density-compound-decomposition.md  README.md  a3z-decompose-corner-radius-scaleindex.md  a9t-legacykey-pin-relation-size.md  accent-colorrole-decompose.md  add-component-options-editor.md  add-design-system-registry.md  add-get-tokens-by-file.md  add-rust-optimized-diff.md  add-s2-docs-agent-skill.md  add-set-token-outer-uuids.md  add-spectrum-design-data-package.md  add-spectrum-glossary.md  agent-mcp-read-tools-in-process.md  agent-skills-enhancements.md  agent-skills-feature.md  agent-surface-distribution.md  agent-surface-phase-b-promotion.md  anatomy-terms-add-disclosure-picker-progress-bar.md  anatomy-terms-audit.md  authoring-per-category-contracts.md  authoring-workflow-spec-backbone.md  (+181 more)
.claude-plugin/: marketplace.json
.cursor/: mcp.json  rules
.github/: ci-targets.json
.moon/: toolchain.yml  wasm-pack.toml  workspace.yml
.scout/: scout.config.yaml
.serena/: project.yml
docs/: rfc-coordination.md  scenarios.md
planning/: ADAPTIVE_DESIGN_DATA_SYSTEM.md  AUTHORING_PLATFORM_ARCHITECTURE.md  CONTEXTUAL_METADATA_SYSTEM.md  CONTEXTUAL_VARIATIONS_SYSTEM.md  DESIGN_SYSTEM_AGNOSTIC_ARCHITECTURE.md  DEVELOPER_EXPERIENCE_EXTENSIONS.md  ENHANCED_OVERRIDE_SYSTEM.md  GOVERNANCE_AND_ROLLOUT_STRATEGY.md  LIFECYCLE_METADATA_PLAN.md  OVERRIDE_VERSIONING_VALIDATION.md  PLATFORM_SDK_ARCHITECTURE.md  (+4 more)
sdk/cli/: CHANGELOG.md  Cargo.toml  package.json
sdk/cli/src/: authoring.rs  data.rs  format.rs  main.rs
sdk/cli/tests/: cli_manifest.rs  cli_tui.rs  cli_validate.rs
sdk/core/: Cargo.toml  build.rs
sdk/core/src/: cascade.rs  compat.rs  diff.rs  discovery.rs  graph.rs  legacy.rs  lib.rs  manifest.rs  migrate.rs  naming.rs  primer.rs  query.rs  registry.rs  registry_data.rs  report.rs  schema.rs  suggest.rs  write.rs
sdk/core/src/authoring/: data_object.rs  draft.rs  lifecycle.rs  mod.rs  mode_set.rs  session.rs
sdk/core/src/cache/: mod.rs
sdk/core/src/data_source/: embedded.rs  fetch.rs  mod.rs  test_support.rs
sdk/core/src/figma/: api.rs  color.rs  mapping.rs  mod.rs  types.rs
sdk/core/src/validate/: dataset_structure.rs  mod.rs  relational.rs  rule.rs  structural.rs
sdk/core/src/validate/rules/: mod.rs  spec001.rs  spec002.rs  spec003.rs  spec004.rs  spec005.rs  spec006.rs  spec007.rs  spec008.rs  spec009.rs  spec010.rs  spec011.rs  spec012.rs  spec013.rs  spec014.rs  spec015.rs  spec016.rs  spec018.rs  spec019.rs  spec020.rs  spec021.rs  spec022.rs  spec023.rs  spec024.rs  spec025.rs  spec026.rs  spec027.rs  spec028.rs  spec029.rs  spec030.rs  spec031.rs  spec032.rs  spec034.rs  spec035.rs  spec036.rs  spec037.rs  spec038.rs  spec039.rs  spec040.rs  spec041.rs  (+7 more)
sdk/core/tests/: prop_naming.rs  suggest_calibration.rs
tools/optimized-diff-rs/: COMPLETE_PERFORMANCE_ANALYSIS.md  Cargo.toml  NPM_PACKAGING_ANALYSIS.md  PERFORMANCE_COMPARISON.md  PLATFORM_CUSTOMIZATION_STRATEGY.md  PLATFORM_DOCS_STRATEGY.md  README.md  SIZE_COMPARISON.md  SPECTRUM_COMPLETE_SDK_STRATEGY.md  SPECTRUM_SDK_STRATEGY.md  SWIFTUI_INTEGRATION_STRATEGY.md  WASM_NPM_STRATEGY.md  moon.yml
tools/optimized-diff-rs/benches/: diff_benchmark.rs
tools/optimized-diff-rs/benchmark_data/: compare_results.js  js_benchmark.js
tools/optimized-diff-rs/benchmark_data/test_1000_30/: js_results.json  original.json  rust_results.json  updated.json
tools/optimized-diff-rs/benchmark_data/test_100_10/: js_results.json  original.json  rust_results.json  updated.json
tools/optimized-diff-rs/benchmark_data/test_2000_15/: js_results.json  original.json  rust_results.json  updated.json
tools/optimized-diff-rs/benchmark_data/test_500_20/: js_results.json  original.json  rust_results.json  updated.json
tools/optimized-diff-rs/examples/: basic_usage.rs  performance_comparison.rs  release_benchmark.rs
tools/optimized-diff-rs/src/: engine.rs  error.rs  lib.rs  types.rs
tools/optimized-diff-rs/tests/: integration_tests.rs
(+1233 files in other folders)
