[package]
name = "design-data-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "design-data CLI — validate and inspect Spectrum design data"

[[bin]]
name = "design-data"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
design-data-core = { path = "../core" }
miette = { version = "7.4", features = ["fancy"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
