[package]
name = "design-data-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Design Data Specification validation core (structural + graph rules)"

[lib]
path = "src/lib.rs"

[dependencies]
jsonschema = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
