[package]
name = "design-data-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Design Data Specification validation core (structural + graph rules)"

[lib]
path = "src/lib.rs"

[dependencies]
# resolve-http and resolve-file are jsonschema's default features but are not
# supported on wasm32-unknown-unknown. We disable defaults here and re-enable
# them via the `schema-resolvers` feature (added to `default` below) so that
# native builds still have full resolver support while wasm builds compile cleanly.
jsonschema = { version = "0.29", default-features = false }
serde = { version = "1.0", features = ["derive"] }
# preserve_order switches serde_json's Map from BTreeMap to IndexMap (crate-wide).
# Required so write_token merges tokens without resorting keys on round-trip.
serde_json = { version = "1.0", features = ["preserve_order"] }
dirs = "5"
tempfile = "3.14"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
include_dir = "0.7"
semver = "1"
toml = "0.8"
walkdir = "2.5"
flate2 = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
tar = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
# Embedded-database cache layer. Pinned to 2.6.x to keep the workspace MSRV at
# Rust 1.85 (redb 4.x requires Rust 1.89). Pure-Rust + WASM-capable via the
# in-memory storage backend in `cache::mem_backend`.
redb = { version = "2.6", optional = true }
# MessagePack codec for the values stored in the cache. Must be self-describing
# (supports `deserialize_any`) so it can round-trip `serde_json::Value`; this
# rules out postcard/bincode. Pure-Rust, compact, and WASM-friendly.
rmp-serde = { version = "1.3", optional = true }

[features]
default = ["cache", "schema-resolvers"]
# Derived embedded-database cache over the canonical JSON files. On by default so
# the CLI/TUI skip re-parsing JSON on every invocation; library consumers may opt
# out with `--no-default-features`.
cache = ["dep:redb", "dep:rmp-serde"]
# Forward-looking flag for `wasm32` web tools: the cache's in-memory open-from-bytes
# path (`cache::load_from_bytes`) needs no filesystem and works under this feature.
wasm = ["cache"]
# Re-enable jsonschema's resolve-http and resolve-file features for native builds.
# These are not supported on wasm32-unknown-unknown (jsonschema fires a compile_error),
# so they are excluded from the `wasm` feature set. Included in `default` so native
# tooling (CLI/TUI/tests) retains full schema validation with HTTP + file resolution.
schema-resolvers = ["jsonschema/resolve-http", "jsonschema/resolve-file"]
fetch = ["dep:reqwest", "dep:tokio", "dep:flate2", "dep:tar"]
figma = ["dep:reqwest", "dep:tokio"]

# On wasm32-unknown-unknown, getrandom (pulled in transitively e.g. by ahash → jsonschema)
# needs the `wasm_js` backend, and uuid's plain `rng` path doesn't work either.
# These target-scoped deps add the wasm32-specific features without affecting native builds.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# uuid: `js` feature uses wasm-bindgen/js-sys to call crypto.getRandomValues directly,
# sidestepping the getrandom version chain.
uuid = { version = "1.11", features = ["js"] }
# getrandom 0.3 is pulled in transitively (e.g. by ahash). Enable `wasm_js` so Cargo
# merges it into that transitive copy. The backend activation also requires the cfg flag
# in sdk/.cargo/config.toml.
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
regex = "1"
proptest = "1"
