[package]
name = "optimized-diff-rs"
version = "1.0.0"
edition = "2021"
authors = ["Garth Braithwaite <garthdb@gmail.com>"]
description = "High-performance deep object diff algorithm with significant performance improvements over generic libraries"
license = "Apache-2.0"
repository = "https://github.com/adobe/spectrum-tokens"
keywords = ["diff", "deep-diff", "object-diff", "algorithm", "performance"]

[lib]
name = "optimized_diff"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"